# Crypto_Investing

./: .dockerignore  Dockerfile  Makefile  README.md  github.txt  pyproject.toml  render.yaml  requirements.txt  start.sh  test_api.py
Crypto_Investing/: fetch_bitcoin_data.py
app/: main.py
docs/: 36120 - AdvMLA - AT3 Report Template.docx
models/: bitcoin_lightgbm_model.pkl  bitcoin_random_forest_simple.pkl  bitcoin_return_model.pkl  bitcoin_scaler.pkl  bitcoin_scaler_lightgbm.pkl  bitcoin_scaler_return.pkl  bitcoin_scaler_simple.pkl  bitcoin_xgboost_model.pkl  feature_columns.pkl  feature_columns_lightgbm.pkl  feature_columns_return.pkl  feature_columns_simple.pkl  model_metadata.pkl  model_metadata_lightgbm.pkl  model_metadata_return.pkl  model_metadata_simple.pkl
notebooks/: 36120-25SP-AT3-group_id-student_id.ipynb  DATA_DIAGNOSTIC.ipynb  bitcoin_data_collection.ipynb  bitcoin_feature_engineering.ipynb  bitcoin_model_RETURN_BASED_FIXED.ipynb  bitcoin_model_RETURN_BASED_FIXED_executed.ipynb  bitcoin_model_SIMPLE_ROBUST.ipynb  bitcoin_model_lightgbm_FIXED.ipynb  bitcoin_model_training_xgboost.ipynb  data_patching.ipynb
