[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Crypto_Investing"
version = "0.0.1"
description = "The user will also be able to assess predictions from ML models about the chosen cryptocurrency. Each model will need to predict a HIGH price the next day (day +1)."
authors = [
  { name = "Afraz Ul Haque" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.10"

[tool.ruff]
line-length = 99
src = ["Crypto_Investing"]
include = ["pyproject.toml", "Crypto_Investing/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["Crypto_Investing"]
force-sort-within-sections = true

